--- a/dist.ini
+++ b/dist.ini
@@ -23,6 +23,20 @@ repository.type = git
 
 [Prereqs / RuntimeRequires]
 Catalyst = 0
+Dist::Zilla = 0
+Dist::Zilla::Plugin::Git::CommitBuild = 0
+Dist::Zilla::Plugin::Git::NextVersion = 0
+Dist::Zilla::Plugin::InstallGuide = 0
+Dist::Zilla::Plugin::LatestPrereqs = 0
+Dist::Zilla::Plugin::MetaConfig = 0
+Dist::Zilla::Plugin::MetaJSON = 0
+Dist::Zilla::Plugin::MetaResources = 0
+Dist::Zilla::Plugin::NextRelease = 0
+Dist::Zilla::Plugin::PkgVersion = 0
+Dist::Zilla::Plugin::Prereqs = 0
+Dist::Zilla::PluginBundle::Basic = 0
+Dist::Zilla::PluginBundle::Git = 0
+Starman = 0
 YAML = 0
 YAML::XS = 0
 [LatestPrereqs]
