Import of SHANTANU/Task-BeLike-Shantanu-0.005 from CPAN.
gitpan-cpan-distribution: Task-BeLike-Shantanu
gitpan-cpan-version:      0.005
gitpan-cpan-path:         SHANTANU/Task-BeLike-Shantanu-0.005.tar.gz
gitpan-cpan-author:       SHANTANU
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -23,6 +23,9 @@ repository.type = git
 
 [Prereqs / RuntimeRequires]
 Catalyst = 0
+Catalyst::Runtime = 0
+Catalyst::View::CSS::Minifier::XS = 0
+Catalyst::View::JavaScript::Minifier::XS = 0
 Dist::Zilla = 0
 Dist::Zilla::Plugin::Git::CommitBuild = 0
 Dist::Zilla::Plugin::Git::NextVersion = 0
@@ -36,6 +39,11 @@ Dist::Zilla::Plugin::PkgVersion = 0
 Dist::Zilla::Plugin::Prereqs = 0
 Dist::Zilla::PluginBundle::Basic = 0
 Dist::Zilla::PluginBundle::Git = 0
+Log::Dispatch::FileRotate = 0
+Log::Log4perl = 0
+Log::Log4perl::Catalyst = 0
+Moose = 0
+MooseX::MarkAsMethods = 0
 Starman = 0
 YAML = 0
 YAML::XS = 0
