--- a/dist.ini
+++ b/dist.ini
@@ -1,57 +1,10 @@
 name    = Task-BeLike-Shantanu
 author  = Shantanu Bhadoria <shantanu@cpan.org>
-license = Perl_5
 copyright_holder = Shantanu Bhadoria
-copyright_year   = 2012
+license = Perl_5
 
-[@Basic]
-
-[Git::NextVersion]
-first_version = 0.001       ; this is the default
-version_regexp  = ^v(.+)$   ; this is the default
-[PkgVersion]
-[MetaConfig]
-[MetaJSON]
-[NextRelease]
-
-
-[MetaResources]
-homepage = http://search.cpan.org/dist/Task-BeLike-Shantanu/
-repository.url = http://github.com/shantanubhadoria/task--belike--shantanu.git
-repository.web = http://github.com/shantanubhadoria/task--belike--shantanu
-repository.type = git
-
-[Prereqs / RuntimeRequires]
-Catalyst = 0
-Catalyst::Runtime = 0
-Catalyst::View::CSS::Minifier::XS = 0
-Catalyst::View::JavaScript::Minifier::XS = 0
-Dist::Zilla = 0
-Dist::Zilla::Plugin::Git::CommitBuild = 0
-Dist::Zilla::Plugin::Git::NextVersion = 0
-Dist::Zilla::Plugin::InstallGuide = 0
-Dist::Zilla::Plugin::LatestPrereqs = 0
-Dist::Zilla::Plugin::MetaConfig = 0
-Dist::Zilla::Plugin::MetaJSON = 0
-Dist::Zilla::Plugin::MetaResources = 0
-Dist::Zilla::Plugin::NextRelease = 0
-Dist::Zilla::Plugin::PkgVersion = 0
-Dist::Zilla::Plugin::Prereqs = 0
-Dist::Zilla::PluginBundle::Basic = 0
-Dist::Zilla::PluginBundle::Git = 0
-Log::Dispatch::FileRotate = 0
-Log::Log4perl = 0
-Log::Log4perl::Catalyst = 0
-Moose = 0
-MooseX::MarkAsMethods = 0
-Starman = 0
-YAML = 0
-YAML::XS = 0
-[LatestPrereqs]
-
-[@Git]
-
-[InstallGuide]
-[Git::CommitBuild]
-
-
+[@SHANTANU]
+fake_release = 0
+no_git=0
+stopwords = ConfigSlicer
+stopwords = ini 
