--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300038, CPAN::Meta::Converter version 2.132510'
+generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.131560'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -29,7 +29,7 @@ no_index:
 provides:
   Task::BeLike::Shantanu:
     file: lib/Task/BeLike/Shantanu.pm
-    version: 0.07
+    version: 0.08
 requires:
   Acme::CPANAuthors::India: 0
   App::cpanminus: 0
@@ -70,8 +70,10 @@ requires:
   Net::SSLeay: 0
   Perl::Critic: 0
   Perl::Tidy: 0
+  Pod::Simple: 3.28
   Pod::Weaver::PluginBundle::SHANTANU: 0
   Starman: 0.30
+  Test::Pod: 1.48
   YAML: 0.84
   YAML::XS: 0.38
   autodie: 0
@@ -82,6 +84,6 @@ resources:
   bugtracker: https://github.com/shantanubhadoria/task-belike-shantanu/issues
   homepage: https://metacpan.org/release/Task-BeLike-Shantanu
   repository: git://github.com/shantanubhadoria/task-belike-shantanu.git
-version: 0.07
+version: 0.08
 x_contributors:
   - 'Shantanu <shantanu@cpan.org>'
